# digithings

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .release-please-manifest-digiskills.json  .release-please-manifest.json  .vulture_whitelist.py  AGENTS.md  ARCHITECTURE.md  BRANCHING.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  ClAUDE.md  DEPLOY.md  DIGI.md  DIGICHAT.md  DOCKER.md  LAUNCH.md  LICENSE  METRICS.md  Makefile  ONBOARDING.md  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  WORKFLOW_IMPROVEMENTS.md  agents.yml  conftest.py  docker-compose.yml  leaktest-smoke.txt  mypy.ini  package-lock.json  package.json  pip-audit-ignore.txt  pytest.ini  release-please-config-digiskills.json  (+2 more)
apps/digiquant-atlas/: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  CLAUDE_PROJECT_INSTRUCTIONS.md  README.md  RUNBOOK.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt
apps/digiquant-atlas/.cursor/: mcp.json
apps/digiquant-atlas/.github/: copilot-instructions.md
apps/digiquant-atlas/agents/: alt-data-analyst.agent.md  institutional-analyst.agent.md  orchestrator.agent.md  pipeline-evolution.agent.md  portfolio-manager.agent.md  research-assistant.agent.md  sector-analyst.agent.md  thesis-tracker.agent.md
apps/digiquant-atlas/config/: data-sources.md  email-research.md  investment-profile.md  macro_series.yaml  mcp.secrets.env.example  preferences.md  sectors.yaml
apps/digiquant-atlas/cowork/: OPERATOR-COWORK.example.md  OPERATOR-COWORK.md  PROJECT-PROMPT.md  PROJECT.md  README.md  SETUP-ATLAS-COWORK.md
apps/digiquant-atlas/data/: README.md
apps/digiquant-atlas/docs/: DEPLOYMENT.md  DESIGN-DECISIONS.md
apps/digiquant-atlas/frontend/: README.md  next.config.mjs  package.json
apps/digiquant-atlas/scripts/: audit_config_references.py  backfill-historical-daily-to-supabase.sh  backfill_context.py  backfill_execution_prices.py  backfill_normalize_schemas.py  backfill_simulated_runs.py  compute-technicals.py  cowork-daily-prompt.txt  cowork-research-prompt.txt  ensure_position_activity_through_today.py  execute_at_open.py  fetch-macro.py  fetch-market-data.sh  fetch-quotes.py  fill-entry-prices.py  git-commit.sh  ingest_crypto_fng.py  ingest_fred.py  ingest_fx_frankfurter.py  legacy_delta_to_ops.py  materialize_snapshot.py  memory-search.sh  monthly-rollup.sh  new-day.sh  position_entry_from_events.py  preload-history.py  publish_document.py  publish_research.py  refresh_performance_metrics.py  regen_research_deltas.py  scaffold_deep_dive.sh  scaffold_evolution_day.sh  smoke-test.sh  status.sh  sync_positions_from_rebalance.py  thesis.sh  validate-frontmatter.sh  validate-providers.py  validate_artifact.py  validate_db_first.py  (+3 more)
apps/digiquant-atlas/supabase/: SCHEMA.md
apps/digiquant-atlas/templates/: digest-snapshot-schema.json  snapshot-schema.json
apps/digiquant-atlas/tests/: test_book_integrity.py  test_cli.py  test_custom_research.py  test_etl.py  test_graph_compile.py  test_migration_024.py  test_phase12.py  test_phase34.py  test_phase5.py  test_phase67.py  test_phase7c_specialists.py  test_phase7cd_debate.py  test_phase7d_risk_debate.py  test_phase9_reflection.py  test_pipeline_simulation.py  test_preflight.py  test_publish_phase.py  test_schemas.py  test_skills.py  test_state.py  test_supabase_io.py  test_triage_monthly_phase9.py
digibase/: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DIGIBASE.md  README.md  pyproject.toml
digibase/src/digibase/: __init__.py  audit.py  cors.py  errors.py  http.py  http_client.py  llm.py  metrics.py  otel.py  util.py
digiclaw/: .dockerignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DIGICLAW.md  Dockerfile  __init__.py  __main__.py  audit.py  heartbeat_runner.py  pyproject.toml
digiclaw/docs/: HEARTBEAT.md
digiclaw/skills/: README.md
digiclaw/src/digiclaw/: __init__.py  audit.py  digikey_auth.py  heartbeat_runner.py
digifetch/: AGENTS.md  ARCHITECTURE.md  pyproject.toml
digifetch/src/digifetch/: __init__.py  browser.py  http.py  ratelimit.py  retry.py
digifetch/tests/: test_browser.py  test_http.py  test_package.py  test_ratelimit.py  test_retry.py
digigraph/: .dockerignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DIGIGRAPH.md  Dockerfile  pyproject.toml
digigraph/docs/: LANGGRAPH_REVIEW.md  OPENWEBUI.md  SECURITY.md
digigraph/policies/: README.md
digigraph/src/digigraph/: __init__.py  audit.py  boundaries.py  circuit_breaker.py  cli.py  digistore.py  env_utils.py  filter_hints.py  llm.py  llm_auth.py  llm_client.py  mcp_server.py  model_config.py  models.py  path_utils.py  policy.py  project_config.py  project_migrate.py  project_validate.py  rate_limit.py  research_brief_models.py  run_storage.py  server.py  thread_scope.py  tool_policy.py  trace_events.py  trading_profile.py  usage.py  workflow.py
digikey/: .dockerignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DIGIKEY.md  Dockerfile  README.md  pyproject.toml
digikey/src/digikey/: __init__.py  __main__.py  blocklist.py  cli.py  (+12 more)
digillm/: ARCHITECTURE.md  pyproject.toml
digillm/docs/: V2_LITELLM_API_PLAN.md
digillm/tests/: test_digillm.py
digiquant/: .dockerignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DIGIQUANT.md  Dockerfile  pyproject.toml  tearsheet.html
digiquant/data/: README.md
digiquant/docs/: DIGIQUANT_CHAT_PRODUCT_GAP.md  NAUTILUS_NAVIGATION.md  NAUTILUS_QUICK_REF.md  NAUTILUS_STRATEGIES.md
digiquant/scripts/: _env.py  fetch_coinbase.py  fetch_nautilus_test_data.py  fetch_real_ohlcv.py  generate_tearsheets.py  sync_strategy_calibrations.py  verify_strategy_calibrations_rls.py
digiquant/supabase/: README.md  SCHEMA.md  config.toml
digisearch/: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DIGISEARCH.md  Dockerfile  pyproject.toml
digisearch/devdata/: README.md
digisearch/seeds/: digiclone_gold_brief.md
digisearch/test/: test_edgar_export.py
digiskills/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  pyproject.toml
digismith/: .dockerignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DIGISMITH.md  Dockerfile  pyproject.toml
digivault/: AGENTS.md  ARCHITECTURE.md  Dockerfile  pyproject.toml
(+3039 files in other folders)
