[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digibase"
version = "0.1.0"
description = "Shared DigiThings platform primitives (HTTP tracing, API errors, audit helpers, optional OTel)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "httpx>=0.27",
    "fastapi>=0.115",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
