[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digiclaw"
version = "0.1.0"
description = "DigiClaw – heartbeat runner + append-only JSONL audit log for the DigiThings stack"
readme = "ARCHITECTURE.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "digibase>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
digiclaw-heartbeat = "digiclaw.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["../tests/dc"]
pythonpath = ["src"]
