[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digigraph"
version = "0.1.0"
description = "DigiGraph – LangGraph orchestration brain (Digi Ecosystem)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "polars>=1.0",
    "uvicorn[standard]>=0.30",
    "fastapi>=0.115",
    "httpx>=0.27",
    "langgraph>=0.2",
    "openai>=1.0",
    "pyyaml>=6",
    "tabulate>=0.9",
    "matplotlib>=3.8",
    "plotly>=5.0",
    "kaleido>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=4", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
