[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digigraph"
version = "0.1.0"
description = "DigiGraph – LangGraph orchestration brain (Digi Ecosystem)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "polars>=1.0",
    "uvicorn[standard]>=0.30",
    "fastapi>=0.115",
    "httpx>=0.27",
    "langgraph>=0.2",
    "openai>=1.0",
    "pyyaml>=6",
    "jsonschema>=4.21",
    "tabulate>=0.9",
    "matplotlib>=3.8",
    "plotly>=5.0",
    "kaleido>=0.2",
    "digismith>=0.1.0",
    "digibase>=0.1.0",
    "digikey>=0.1.0",
]

[project.optional-dependencies]
tracing = ["langsmith>=0.1"]
dev = ["pytest>=8", "pytest-cov>=4", "ruff>=0.8"]
otel = ["digibase[otel]"]
mcp = ["mcp>=1.2"]
checkpoint-sqlite = ["langgraph-checkpoint-sqlite>=2.0"]
checkpoint-postgres = ["langgraph-checkpoint-postgres>=2.0"]

[project.scripts]
digi = "digigraph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
digigraph = ["schemas/*.json"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# Service entrypoint imports after dotenv/sys.path bootstrap — by design.
"src/digigraph/server.py" = ["E402"]
# Package __init__ files re-export public symbols.
"**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
# Monorepo tests live at repo root tests/dg/; from digigraph/: `pytest` picks these up; or `make test-unit` from repo root.
testpaths = ["../tests/dg"]
pythonpath = ["src"]
