[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digikey"
version = "0.1.0"
description = "DigiKey – identity, API keys, and JWT issuance for the Digi ecosystem"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "bcrypt>=4",
    "PyJWT>=2.8",
    "cryptography>=42",
    "httpx>=0.27",
    "redis>=5",
    "digibase>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8", "fakeredis>=2.20"]

[project.scripts]
digikey = "digikey.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["../tests/dk"]
pythonpath = ["src"]
