[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digiquant"
version = "0.1.0"
description = "DigiQuant – high-perf Nautilus + Polars quant pipeline (Digi Ecosystem)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "digikey>=0.1.0",
    "click>=8",
    "pydantic>=2",
    "uvicorn[standard]>=0.30",
    "fastapi>=0.115",
    "polars>=1.0",
    "optuna>=4.7.0",
    "digibase>=0.1.0",
    "langgraph>=0.2",
]
[project.optional-dependencies]
nautilus = ["nautilus_trader>=1.190,<2", "requests>=2.28"]
visualization = ["plotly>=6.3.1"]
data = ["yfinance>=0.2", "curl-cffi>=0.15.0"]
prices = [
    "yfinance>=0.2",
    "requests>=2.28",
    "pyyaml>=6",
    "supabase>=2.0",
    "python-dotenv>=1",
    # yfinance returns pandas DataFrames with Int64/Float64 extension dtypes;
    # pl.from_pandas() requires pyarrow to convert them to polars.
    "pyarrow>=15",
]
optimize = ["optuna>=3.0"]
all = ["digiquant[nautilus]"]
dev = ["pytest>=8", "pytest-cov>=4", "ruff>=0.8"]
mcp = ["mcp>=1.2"]
otel = ["digibase[otel]"]

[project.scripts]
digiquant = "digiquant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# Service entrypoint imports after dotenv/sys.path bootstrap — by design.
"src/digiquant/server.py" = ["E402"]
# Tearsheet optionally uses plotly via a try/import availability guard.
"src/digiquant/tearsheet.py" = ["F401"]
# Package __init__ files re-export public symbols.
"**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
