[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digiquant"
version = "0.1.0"
description = "DigiQuant – high-perf Nautilus + Polars quant pipeline (Digi Ecosystem)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "digikey>=0.1.0",
    "click>=8",
    "pydantic>=2",
    "uvicorn[standard]>=0.30",
    "fastapi>=0.115",
    "polars>=1.0",
    "optuna>=4.7.0",
    "digibase>=0.1.0",
    "langgraph>=0.2",
]
[project.optional-dependencies]
nautilus = ["nautilus_trader>=1.190,<2", "requests>=2.28"]
visualization = ["plotly>=6.3.1"]
data = ["yfinance>=0.2", "curl-cffi>=0.15.0"]
prices = [
    "yfinance>=0.2",
    "requests>=2.28",
    "pyyaml>=6",
    "supabase>=2.0",
    "python-dotenv>=1",
    "pyarrow>=15",
    # Trading-calendar source for trading_calendar table (ADR-0013, issue #337).
    # exchange_calendars returns pandas DataFrames; calendar_sync.py flattens
    # them to dicts at the boundary so the rest of the pipeline stays Polars-only.
    "exchange_calendars>=4.5",
]
# Atlas research pipeline runtime. The atlas sub-package also imports
# `digigraph` (workspace-local, not on PyPI) — install via
# scripts/install-workspace.sh or `pip install -e ./digigraph` first.
atlas = [
    "PyYAML>=6",
    "jsonschema>=4.21",
    "python-dotenv>=1",
    "httpx>=0.27",
    "supabase>=2.0",
]
optimize = ["optuna>=3.0"]
all = ["digiquant[nautilus]"]
# Pulls in atlas runtime deps too, so `pytest tests/dq/atlas/` works whenever
# digigraph is also on the path (via install-workspace.sh or editable install).
dev = ["digiquant[atlas]", "pytest>=8", "pytest-cov>=4", "ruff>=0.8"]
mcp = ["mcp>=1.2"]
otel = ["digibase[otel]"]

[project.scripts]
digiquant = "digiquant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# Service entrypoint imports after dotenv/sys.path bootstrap — by design.
"src/digiquant/server.py" = ["E402"]
# Tearsheet optionally uses plotly via a try/import availability guard.
"src/digiquant/tearsheet.py" = ["F401"]
# Package __init__ files re-export public symbols.
"**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
