[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digismith"
version = "0.1.0"
description = "DigiSmith – LangSmith-aligned observability helpers for DigiThings"
readme = "ARCHITECTURE.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "uvicorn[standard]>=0.30",
    "fastapi>=0.115",
    "digibase>=0.1.0",
]

[project.optional-dependencies]
langsmith = ["langsmith>=0.1"]
otel = ["digibase[otel]"]
dev = ["pytest>=8", "pytest-cov>=4", "httpx>=0.27", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["../tests/dsm"]
pythonpath = ["src"]
