[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digiquant-atlas"
version = "0.1.0"
description = "DigiQuant Atlas — research pipeline sub-graph wiring for DigiGraph"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "langgraph>=0.2",
    "PyYAML>=6",
    "jsonschema>=4.21",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]
# Legacy scripts (apps/digiquant-atlas/scripts/) retain pandas + yfinance.
# New digiquant_atlas package code is Polars-only per repo policy.
legacy-scripts = [
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b",
    "numpy>=1.24.0",
    "requests>=2.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
digiquant_atlas = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: offline unit tests",
    "e2e: requires stack / Supabase",
]
