[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digiquant-atlas"
version = "0.1.0"
description = "DigiQuant Atlas — research pipeline sub-graph wiring for DigiGraph"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "langgraph>=0.2",
    "PyYAML>=6",
    "jsonschema>=4.21",
    "python-dotenv>=1.0.0",
    "httpx>=0.27",
    # In-repo monorepo dependency; installed via editable install in dev.
    # digibase provides the audit-redaction contract that every Atlas write must go through.
    "digibase",
]

[project.optional-dependencies]
# Supabase client is only needed when writing to the production DB;
# unit tests use an in-memory fake. Keep the base install slim.
supabase = [
    "supabase>=2.0.0",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "supabase>=2.0.0",
]
# Legacy scripts (apps/digiquant-atlas/scripts/) retain pandas + yfinance.
# New digiquant_atlas package code is Polars-only per repo policy.
legacy-scripts = [
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b",
    "numpy>=1.24.0",
    "requests>=2.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
digiquant_atlas = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Monorepo layout: digibase lives two levels up. Added to sys.path so tests
# resolve it without requiring an editable install (PEP 668 blocks that
# by default on Homebrew Python).
pythonpath = ["src", "../../digibase/src"]
markers = [
    "unit: offline unit tests",
    "e2e: requires stack / Supabase",
]
