[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digiquant-atlas-legacy-scripts"
version = "0.1.0"
description = "Legacy operator scripts under apps/digiquant-atlas/scripts/. The Atlas Python package now lives at digiquant.atlas (issue #297)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # Legacy operator scripts (apps/digiquant-atlas/scripts/) — pandas/yfinance
    # path predates the Polars-only pipeline. The new digiquant.atlas package
    # is Polars-only per repo policy.
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "PyYAML>=6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[tool.setuptools]
# No Python package shipped from this directory after issue #315 — the
# Atlas runtime moved to digiquant.atlas. Operator scripts under scripts/
# are invoked directly, not packaged.
py-modules = []
